# daedalus

./: .env.example  .gitignore  JUDGE_DEMO.md  README.md  WRITEUP.md  demo_script.md  pyproject.toml  run.sh
dadaledus/: __init__.py  cli.py  desk.py  hooks.py  ledger.py  plugin.yaml  pricing.py  schemas.py  stripe_io.py  tools.py
dadaledus/skill/: SKILL.md
daedalus/: __init__.py  app.py  audit_log.py  cli.py  config.py  egress.py  hermes.py  ledger.py  nemotron.py  orchestrator.py  orders.py  plugin.yaml  pricing.py  spend_control.py  stripe_earn.py  stripe_spend.py
daedalus/jobs/: audit.py
daedalus/skill/: SKILL.md
daedalus/static/: dashboard.html
deploy/: policy.yaml
integrations/hermes_plugin/: README.md
integrations/hermes_plugin/daedalus/: __init__.py  cli.py  desk.py  hooks.py  ledger.py
integrations/hermes_plugin/tests/: test_daedalus.py
skill/: SKILL.md
tests/: conftest.py  test_app.py  test_audit.py  test_audit_log.py  test_dadaledus.py  test_egress.py  test_hermes.py  test_ledger.py  test_nemotron.py  test_orchestrator.py  test_pricing.py  test_spend_control.py  test_stripe_earn.py  test_stripe_spend.py
