[project]
name = "daedalus"
version = "0.2.0"
description = "Financial control plane for agents: double-entry ledger + spend authorization gate, with a real security-audit workload. NVIDIA Nemotron x Stripe x Nous Hermes."
authors = [{ name = "esaradev" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "stripe>=12",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage>=7"]

[project.scripts]
daedalus = "daedalus.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["daedalus", "daedalus.jobs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["live: hits the real network; skipped automatically when offline"]
